--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@mui/material": "^6.1.1",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-query-devtools": "^5.59.0",
+    "@tanstack/react-router": "^1.58.18",
+    "@tanstack/router": "^0.0.1-beta.53",
+    "@tanstack/router-devtools": "^1.58.18",
+    "@tanstack/solid-query": "^5.59.0",
     "astro": "^4.15.4",
     "firebase": "^10.13.1",
     "react": "^18.3.1",
