--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/router-devtools": "^1.58.18",
     "@tanstack/solid-query": "^5.59.0",
     "astro": "^4.15.4",
+    "dotenv": "^16.4.5",
     "firebase": "^10.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
