--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^10.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "typescript": "^5.6.2",
     "vite": "^5.4.8"
   },
