create App component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "jsx": "react-jsx",
     "baseUrl": "./",
     "paths": {
-      "*": ["node_modules/*"]
+      "*": ["node_modules/*"],
+      "src/*": ["src/*"]
     }
   },
   "extends": "astro/tsconfigs/strict"
