--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
+    "@astrojs/check": "0.9.4",
     "@astrojs/react": "^3.6.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -22,7 +22,7 @@
     "@tanstack/router": "^0.0.1-beta.53",
     "@tanstack/router-devtools": "^1.58.18",
     "@tanstack/solid-query": "^5.59.0",
-    "astro": "^4.15.4",
+    "astro": "4.16.2",
     "dotenv": "^16.4.5",
     "firebase": "^10.13.1",
     "react": "^18.3.1",
