--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "typescript": "^5.6.2",
-    "vite": "^5.4.8"
+    "uuid": "^10.0.0",
+    "vite": "^5.4.8",
+    "zod": "^3.23.8"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
     "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0"
+    "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0"
   }
 }
