--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "swiper": "^11.1.14",
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
     "vite": "^5.4.8",
